--- a/django_course_site/challenges/templates/challenges/challenge.html
+++ b/django_course_site/challenges/templates/challenges/challenge.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenge</title>
+    <title>{{ month }} Challenge</title>
 </head>
 
 <body>
-    <h1>This is a Challenge</h1>{{ text }}
+    <h1>{{ month }} Challenge</h1>{{ text }}
 </body>
 
 </html>
