--- a/django_course_site/challenges/templates/challenges/challenge.html
+++ b/django_course_site/challenges/templates/challenges/challenge.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ month|title }} Challenge</title>
-  </head>
-
-  <body>
-    <h1>{{ month|title }} Challenge</h1>
-    {% if text %} {{ text }} {% else %}
+{% extends "base.html" %} 
+{% block page_title %}{{ month|title }} Challenge {% endblock page_title %}
+{% block body %}
+  <h1>{{ month|title }} Challenge</h1>
+  {% if text %} 
+    {{ text }}
+  {% else %}
     <p>There is no challenge for {{ month }}.</p>
-    {% endif %}
-  </body>
-</html>
+  {% endif %} 
+{% endblock body %}
