--- a/django_course_site/challenges/templates/challenges/index.html
+++ b/django_course_site/challenges/templates/challenges/index.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block page_title %}Challenge{% endblock %} 
 {% block body %}
-    <ol>
-      {% for month in months %}
-      <li><a href="{% url "month-challenge" month %}">{{month|title}}</a></li>
-      {% endfor %}
-    </ol>
+  {% include "challenges/include/header.html" with link_name="Go to this page"%}
+  <ol>
+    {% for month in months %}
+    <li><a href="{% url "month-challenge" month %}">{{month|title}}</a></li>
+    {% endfor %}
+  </ol>
 {% endblock %}
