--- a/django_course_site/templates/base.html
+++ b/django_course_site/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block page_title %}Challenge{% endblock %}</title>
+    {% block css_style %}{% endblock css_style %}
   </head>
 
   <body>
