--- a/django_course_site/templates/base.html
+++ b/django_course_site/templates/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block page_title %}Challenge{% endblock %}</title>
+    <link rel="stylesheet" href="{% static "styles.css" %}">
     {% block css_style %}{% endblock css_style %}
   </head>
 
