--- a/django_course_site/reviews/templates/reviews/review.html
+++ b/django_course_site/reviews/templates/reviews/review.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br><br>
+        <button>Send</button>
+    </form>
 </body>
 </html>
