Simple form implementation with validation

--- a/django_course_site/reviews/templates/reviews/thankyou.html
+++ b/django_course_site/reviews/templates/reviews/thankyou.html
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="POST">
-        {% csrf_token %}
-        {{form}}
-        <button>Send</button>
-    </form>
+    Thank you
 </body>
 </html>
