Customizing the rendered HTML form

--- a/django_course_site/reviews/templates/reviews/review.html
+++ b/django_course_site/reviews/templates/reviews/review.html
@@ -8,7 +8,9 @@
 <body>
     <form method="POST">
         {% csrf_token %}
-        {{form}}
+        {{ form.user_name.label_tag }}
+        {{ form.user_name }}
+        {{ form.user_name.errors }}
         <button>Send</button>
     </form>
 </body>
